# BladeRunner

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTIC-AI.md  ARCHITECTURE.drawio  Dockerfile  EXAMPLES.md  LICENSE  Makefile  README.md  config.example.yml  coverage.xml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/tasks/: data.json  research.json  software.json
bladerunner/: __init__.py  __main__.py  adaptive_strategy.py  adk_bridge.py  agent.py  agent_orchestrator.py  api.py  api_server.py  api_store.py  backend_manager.py  capability_eval.py  cli.py  config.py  create_user.py  evaluation.py  execution_trace.py  interactive.py  logging_config.py  memory.py  permissions.py  safety.py  semantic_memory.py  sessions.py  skills.py  text_utils.py  tool_tracker.py
bladerunner/tools/: __init__.py  base.py  bash.py  filesystem.py  image.py  rag.py  web.py
bladerunner/webapp/: app.js  index.html  styles.css
docs/: AGENTIC-AI.md  ARCHITECTURE (dark).drawio  ARCHITECTURE (light).drawio  ARCHITECTURE.drawio  EXAMPLES.md  FEATURES.md
tests/: test_adaptive_strategy.py  test_adk_bridge.py  test_agent.py  test_agent_orchestrator.py  test_api_server.py  test_api_store.py  test_backend_manager.py  test_capability_eval.py  test_cli.py  test_config.py  test_evaluation.py  test_execution_trace.py  test_integration.py  test_interactive.py  test_permissions.py  test_run.py  test_safety.py  test_semantic_memory.py  test_sessions.py  test_skills.py  test_smoke.py  test_tool_tracker.py  test_tools_base.py  test_tools_bash.py  test_tools_filesystem.py  test_tools_image.py  test_tools_rag.py  test_tools_web.py
